adjusted arrayList method calls based on the restrictions of jdk 17, added spawning waves of zombies