@@ -32,6 +32,7 @@ public class Level {
 
         internal_start = curTime;
         sun_interval = curTime;
+        endFlag = false;
 
         LEVEL_NUM = n;
         TIME_LENGTH = t;
@@ -146,10 +147,12 @@ public class Level {
         int i = 0;
         int found = -1;
 
-        if (cooldowns[i].getPlantType().equalsIgnoreCase(n))
-            found = i;
-        else
-            i++;
+        while (i < cooldowns.length && found == -1) {
+            if (cooldowns[i].getPlantType().equalsIgnoreCase(n))
+                found = i;
+            else
+                i++;
+        }
 
         return cooldowns[found];
     }
@@ -276,9 +279,12 @@ public class Level {
     public void despawn() {
         int i, j;
         // remove dead zombies
-        for (i = 0; i < enemies.size(); i++)
-            if (enemies.get(i).getHealth() == 0)
+        for (i = 0; i < enemies.size(); i++) {
+            if (enemies.get(i).getHealth() == 0) {
+                Zombie.die();
                 enemies.remove(i);
+            }
+        }
 
         // remove dead plants
         for (i = 0; i < ROWS; i++)
@@ -287,9 +293,12 @@ public class Level {
                     tiles[i][j] = null;
 
         // remove inactive suns
-        for (i = suns.size() - 1; i >= 0; i--)
-            if (!suns.get(i).isActive())
+        for (i = suns.size() - 1; i >= 0; i--) {
+            if (!suns.get(i).isActive()) {
+                Sun.despawn();
                 suns.remove(i);
+            }
+        }
 
         // remove inactive projectiles
         for (i = peas.size() - 1; i >= 0; i--)
@@ -337,6 +346,7 @@ public class Level {
      */
     public void gameCycle(int currentTime) {
         int interval = 0;
+        int i;
 
         behaviors(currentTime);
 
@@ -353,15 +363,23 @@ public class Level {
         //if the time in between is >= the interval, it spawns a zombie
         if (interval != 0 && currentTime - internal_start >= interval) {
             spawnZombies(currentTime);
-            System.out.println("Spawned Zombie at (" + (enemies.getLast().getRow() + 1) + ", " + (enemies.getLast().getCol() + 1) + ")");
+            System.out.println("Spawned Zombie at (" + (enemies.get(enemies.size()-1).getRow() + 1) + ", " + (enemies.get(enemies.size()-1).getCol() + 1) + ")");
             internal_start = currentTime;
+        }
+
+        // spawns the hoard of zombies
+        if (currentTime > (int)Math.floor(TIME_LENGTH * 0.945) && !endFlag) {
+            for (i = 0; i < 5 + 2 * (LEVEL_NUM-1); i++)
+                spawnZombies(currentTime);
+
+            endFlag = true;
         }
 
         //spawns a falling sun after a 20-second interval
         //sun_interval : when the last sun was spawned
         if (currentTime - sun_interval >= 20) {
             addSun(currentTime);
-            System.out.println("Sun appeared in (" + (suns.getLast().getCol()+1) + "," + (suns.getLast().getRow()+1) + ")");
+            System.out.println("Sun appeared in (" + (suns.get(suns.size()-1).getRow()+1) + "," + (suns.get(suns.size()-1).getCol()+1) + ")");
             sun_interval = currentTime;
         }
 
@@ -385,7 +403,7 @@ public class Level {
         float targetSpawn = random.nextInt(ROWS) + random.nextFloat();
 
         suns.add(new Sun(0, columnSpawn, true, Math.max(targetSpawn, 1.5f), currentTime));
-        unclaimed_suns += suns.getLast().getAmount();
+        unclaimed_suns += suns.get(suns.size()-1).getAmount();
     }
 
     /**
@@ -395,6 +413,8 @@ public class Level {
      */
     public void removeAllSun() {
         suns.clear();
+        setUnclaimed_suns(0);
+        Sun.setCount(0);
     }
 
     /**number of levels to track game progress */
@@ -423,4 +443,6 @@ public class Level {
     private int internal_start;
     /**time a Sun object has last performed an action */
     private int sun_interval;
+    /**dictates whether to spawn a hoard of zombie*/
+    private boolean endFlag;
 }
